<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CategoryNewActivity">

    <TextView
        android:id="@+id/txtIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_category_id"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtCategoryId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Category ID"
        android:inputType="text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_category_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Category Name"
        android:inputType="text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="processSaveCategory"
            android:text="@string/str_save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:onClick="processCancelCategory"
            android:text="@android:string/cancel" />
    </LinearLayout>
</LinearLayout>