<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/edtFormular"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="#FFFF00"
        android:ems="10"
        android:gravity="end|center_vertical"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mc"
            android:padding="8dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mr"
            android:padding="8dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_m_plus"
            android:padding="8dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_m_minus"
            android:padding="8dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_m"
            android:padding="8dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_ms"
            android:padding="8dp"
            android:textAlignment="center" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnpercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processSpecialFunction"
                android:text="%" />

            <Button
                android:id="@+id/btnCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processClearEntry"
                android:text="CE" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processClear"
                android:text="C" />

            <Button
                android:id="@+id/btnless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processBackspace"
                android:text="DEL" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processSpecialFunction"
                android:text="1/x" />

            <Button
                android:id="@+id/btnx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processSpecialFunction"
                android:text="x²" />

            <Button
                android:id="@+id/btnsqrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processSpecialFunction"
                android:text="√" />

            <Button
                android:id="@+id/btndivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="/" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="9" />

            <Button
                android:id="@+id/btnX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="*" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="6" />

            <Button
                android:id="@+id/btnminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="-" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="3" />

            <Button
                android:id="@+id/btnplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="+" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnplusminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processPlusMinus"
                android:text="+/-" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="0" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="." />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="=" />
        </TableRow>
    </TableLayout>
</LinearLayout>